<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnReciclablesPendiente"
        android:layout_width="334dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gris3"
        android:text="@string/BotónReciclador2"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCent5roAcopio"
        android:layout_width="243dp"
        android:layout_height="158dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/gris2"
        android:drawableTop="@mipmap/ic_launcher_foreground_papelera"
        android:drawablePadding="5dp"
        android:text="@string/CentrosAcopio"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <Button
        android:id="@+id/btnCategoria"
        android:layout_width="173dp"
        android:layout_height="157dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/gris2"
        android:drawableTop="@mipmap/ic_launcher_categorias_foreground"
        android:drawablePadding="5dp"
        android:text="@string/MisCategorias"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <Button
        android:id="@+id/btnRuta"
        android:layout_width="173dp"
        android:layout_height="153dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/gris2"
        android:drawableTop="@mipmap/ic_launcher_mapa_foreground"
        android:drawablePadding="5dp"
        android:text="@string/Ruta"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="192dp"
        android:background="@color/verde_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnPublicacionesRegistradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/BotonReciclador"
            android:textColor="@color/white"
            app:cornerRadius="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888" />

        <TextView
            android:id="@+id/txtReciclador"
            android:layout_width="391dp"
            android:layout_height="43dp"
            android:text="@string/ContenidoReciclador"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503" />

        <TextView
            android:id="@+id/txtRecicladorTitulo"
            android:layout_width="391dp"
            android:layout_height="61dp"
            android:text="@string/TituloReciclador"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.122" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
